test/parse/module/bad-export-name.txt
;;; ERROR: 1
(module (export "foo" foo))
(;; STDERR ;;;
parse/module/bad-export-name.txt:2:23: unexpected token "foo"
(module (export "foo" foo))
                      ^^^
parse/module/bad-export-name.txt:2:26: syntax error, unexpected ), expecting INT or VAR or MEMORY
(module (export "foo" foo))
                         ^
;;; STDERR ;;)
